--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -15,7 +15,7 @@
    <img src="./assets/images/Wedding invite.png" height="300">
    <h3><a href="./public/movie-ranking.html">Movie Ranking Site</a></h3>
    <img src="./assets/images/Movie Ranking.png" height="200">
-   <h3><a href="../Capstone Project 1/Resume.html">Resume</a> </h3>
+   <h3><a href="../Capstone Project 1/Resume.html">Resume 2024</a> </h3>
    <img src="../Capstone Project 1/Public/Resume Screenshot.png" height="300">
    <hr>
    <a href="./public/contact.html">Contact Me</a> 
